<resources>
    <string name="app_name">Currency Exchange</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="total_balance">Total balance</string>
    <string name="my_balances">My balances</string>
    <string name="convert">Convert</string>
    <string name="deposit">Deposit</string>
    <string name="you_sell">You sell</string>
    <string name="you_get">You get</string>
    <string name="submit">Submit</string>
    <string name="transaction_fee_will_be_applied">Transaction fee will be applied: %1$s</string>
</resources>