<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <TextView
        android:id="@+id/total_balance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/total_balance"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_balance_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_balance_tv"
        tools:text="$" />

    <TextView
        android:id="@+id/text_balance_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/text_balance_currency"
        app:layout_constraintTop_toTopOf="@+id/text_balance_currency"
        tools:text="2,313.76" />

    <ImageView
        android:id="@+id/button_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/history_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/text_balance_currency">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_convert"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/convert"
            android:textColor="@color/black"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_deposit"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_grey"
            android:text="@string/deposit"
            android:textColor="@color/white"
            app:cornerRadius="12dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/my_balances"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/balances_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:itemCount="4"
                tools:listitem="@layout/balances_list_item" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>